fix trivy installation

--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Install Trivy
         run: |
-          wget https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.46.2_Linux-64bit.deb
-          sudo dpkg -i trivy_0.46.2_Linux-64bit.deb
+          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sudo sh -s -- -b /usr/local/bin
+
 
       - name: Run Trivy
         run: trivy image --format json --output reports/trivy.json juice-shop:latest
