--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Deploy container
         run: docker run -d --name juice-shop -p 3000:3000 juice-shop:latest
 
+      - name: Pull ZAP Docker image
+        run: docker pull owasp/zap2docker-stable:latest
+
       - name: Run ZAP Baseline Scan
         run: |
           docker run --network host -t owasp/zap2docker-stable zap-baseline.py \
