--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -35,12 +35,12 @@ jobs:
       - name: Deploy container
         run: docker run -d --name juice-shop -p 3000:3000 juice-shop:latest
 
-      - name: Pull ZAP Docker image
-        run: docker pull owasp/zap2docker-stable:latest
+      - name: Pull OWASP ZAP image
+        run: docker pull owasp/zap2docker-weekly:latest
 
       - name: Run ZAP Baseline Scan
         run: |
-          docker run --network host -t owasp/zap2docker-stable zap-baseline.py \
+          docker run --network host -t owasp/zap2docker-weekly:latest zap-baseline.py \
           -t http://localhost:3000 -r reports/zap.html -J reports/zap.json
 
       - name: Upload reports
