--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -88,7 +88,7 @@ jobs:
             ghcr.io/zaproxy/zaproxy:stable \
             zap-baseline.py \
               -t http://localhost:3000 \
-              -x zap-report.xml \
+              -x reports/zap-report.xml \
               -r reports/zap.html \
               -w reports/zap.md \
               -m 5 \
