--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -129,3 +129,26 @@ jobs:
             -F "active=true" \
             -F "verified=false"
 
+      - name: Upload Semgrep to DefectDojo
+        run: |
+          curl -X POST "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
+            -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_KEY }}" \
+            -H "accept: application/json" \
+            -H "Content-Type: multipart/form-data" \
+            -F "scan_type=Semgrep Scan" \
+            -F "file=@reports/semgrep-report.json" \
+            -F "engagement=3" \
+            -F "active=true" \
+            -F "verified=false"
+
+      - name: Upload Trivy to DefectDojo
+        run: |
+          curl -X POST "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
+            -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_KEY }}" \
+            -H "accept: application/json" \
+            -H "Content-Type: multipart/form-data" \
+            -F "scan_type=Trivy Scan" \
+            -F "file=@reports/trivy-report.json" \
+            -F "engagement=3" \
+            -F "active=true" \
+            -F "verified=false"
