--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       #------------------------
-      # Prepare Workspace dir
+      # Prepare Workspace
       #------------------------
       - name: Create reports directory
         run: mkdir -p reports
